# heversi

./: Board.hs  Main.hs  Makefile  README  README.md  ReversKell.cabal  Reversi.hs  haskell-web-reversi.cabal  reverskell.cabal
Adaptors/: Game.hs  User.hs
Config/: Routes.hs  Templates.hs
Controllers/: Chat.hs  Game.hs  Home.hs
Engine/: Core.hs  Routes.hs  Types.hs
Models/: Game.hs  Repo.hs  Types.hs  User.hs
Models/Game/: AI.hs  Board.hs  Engine.hs  IA.hs  Move.hs  Player.hs  Stone.hs
Models/Repo/: Game.hs  Main.hs  Types.hs  User.hs
Resources/style/: style.css
System/: Cookies.hs  Core.hs  Routes.hs  Server.hs  State.hs  Templates.hs  Types.hs
Tests/: Game.hs  State.hs
Views/: myFavoriteAnimalBase.st
Views/Game/: available.st  available_json.st  board.st  board_json.st  board_list.st  index.st  jsonList.st  list.st  play.st  update.st  user_list.st
Views/Home/: index.st  list.st  start.st
Views/Includes/: footer.st  header.st
Views/Resources/scripts/: create.js  join.js  play.js
Views/Resources/style/: style.css
aux/: DOC  stack.hs
aux/GeBoP-1.7.2/: Ataxx.hs  Bamp.hs  GUI.hs  Game.hs  GeBoP.cabal  HSL.hs  Halma.hs  Hex.hs  Inf.hs  Kram.hs  LICENSE.txt  Main.hs  Nim.hs  Reversi.hs  TicTacToe.hs  Tools.hs  Zenix.hs  changelog.txt  readme.txt
aux/GeBoP-1.7.2/help/: brain.html  index.html  info_ataxx.html  info_bamp.html  info_halma.html  (+15 more)
aux/libC/: Makefile  gui.c  gui.h  jogo.c  jogo.h  main.c  uololou.c  uololou.h
aux/othello/: Makefile
aux/reversi-1.0-src/: Aleatorio.hs  Auxiliar.hs  Compilar.bat  Mensagens.hs  Regras.hs  Reversi.hs  Tipos.hs
config/: Routes.hs
(+36 files in other folders)
