Name:                haskell-web-reversi
Version:             0.0
Synopsis:            A Haskell web implementation of Reversi.
Description:
  A Haskell web implementation of Reversi using the web framework HappStack.
License:             GPL
Author:              Mateus Galvão
Maintainer:          mateusgm@dcc.ufmg.br
Build-Type:          Simple
Cabal-Version:       >= 1.2

Executable haq
  Main-is:           Main.hs
  Exposed-Modules:
  Build-Depends:     base >= 4.2, happstack >= 6.0
  
-- reference: http://www.haskell.org/haskellwiki/How_to_write_a_Haskell_program
