Name:                ReversKell
Version:             0.0
Synopsis:            A Haskell web implementation of Reversi.
Description:
  A Haskell web implementation of Reversi using the web framework HappStack.
License:             GPL
Author:              Mateus Galvão
Maintainer:          mateusgm@dcc.ufmg.br
Build-Type:          Simple
Cabal-Version:       >= 1.2

Executable reverskell
   Main-is:          Main.hs
   Build-Depends:    base >= 4.2,
                     happstack-server >= 6.0,
                     happstack-state >= 6.0,
                     HStringTemplate >= 0.6,
                     mtl >= 2.0,
                     containers >= 0.3,
                     utf8-string>= 0.3,
                     bytestring >= 0.9,
                     array >= 0.3
   ghc-options:      -threaded
  
-- reference: http://www.haskell.org/haskellwiki/How_to_write_a_Haskell_program , MissingH >= 1.1
